--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,134 @@
-<ion-header [translucent]="true">
+<ion-header collapse="condense">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title size="large">Inventaris</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-item (click)="logout()">
+    <ion-icon slot="start" ios="exit-outline" md="exit-sharp"></ion-icon>
+    <ion-label>Logout</ion-label>
+  </ion-item>
+  <hr />
+  Selamat datang {{ nama }}
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card *ngFor="let item of dataInventory">
+    <ion-item>
+      <ion-label>
+        {{item.nama}}
+        <p>{{item.jumlah}}</p>
+      </ion-label>
+      <ion-button color="danger" slot="end" (click)="hapusInventory(item.id)"
+        >Hapus</ion-button
+      >
+      <ion-button expand="block" (click)="open_modal_edit(true,item.id)"
+        >Edit</ion-button
+      >
+    </ion-item>
+  </ion-card>
 </ion-content>
+
+<ion-card>
+  <ion-button (click)="open_modal_tambah(true)" expand="block"
+    >Tambah Inventaris</ion-button
+  >
+</ion-card>
+<!-- ini untuk modal tambah -->
+<ion-modal [isOpen]="modal_tambah">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button (click)="cancel()">Batal</ion-button>
+        </ion-buttons>
+        <ion-title>Tambah Inventaris</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-item>
+        <ion-input
+          label="Nama Inventaris"
+          labelPlacement="floating"
+          required
+          [(ngModel)]="nama"
+          placeholder="Masukkan Nama Barang"
+          type="text"
+        >
+        </ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input
+          label="Jumlah Barang"
+          labelPlacement="floating"
+          required
+          [(ngModel)]="jumlah"
+          placeholder="Masukkan Jumlah Barang"
+          type="number"
+        >
+        </ion-input>
+      </ion-item>
+      <ion-row>
+        <ion-col>
+          <ion-button
+            type="button"
+            (click)="tambahInventory()"
+            color="primary"
+            shape="full"
+            expand="block"
+            >Tambah Inventory
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-content>
+  </ng-template>
+</ion-modal>
+<!-- ini untuk modal edit -->
+<ion-modal [isOpen]="modal_edit">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button (click)="cancel()">Batal</ion-button>
+        </ion-buttons>
+        <ion-title>Edit Inventaris</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-item>
+        <ion-input
+          label="Nama Barang"
+          labelPlacement="floating"
+          required
+          [(ngModel)]="nama"
+          placeholder="Masukkan Nama Barang"
+          type="text"
+        >
+        </ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input
+          label="Jumlah Barang"
+          labelPlacement="floating"
+          required
+          [(ngModel)]="jumlah"
+          placeholder="Masukkan jumlah barang"
+          type="number"
+        >
+        </ion-input>
+      </ion-item>
+      <ion-input required [(ngModel)]="id" type="hidden"> </ion-input>
+      <ion-row>
+        <ion-col>
+          <ion-button
+            type="button"
+            (click)="editInventory()"
+            color="primary"
+            shape="full"
+            expand="block"
+            >Edit Inventaris
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-content>
+  </ng-template>
+</ion-modal>
